--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="Source\StateMachine.cpp" />
     <ClCompile Include="Source\StateVillager.cpp" />
     <ClCompile Include="Source\Tree.cpp" />
+    <ClCompile Include="Source\UIAltarPopup.cpp" />
     <ClCompile Include="Source\UIBase.cpp" />
     <ClCompile Include="Source\UIManager.cpp" />
     <ClCompile Include="Source\UIMessagePopup.cpp" />
@@ -246,6 +247,7 @@
     <ClInclude Include="Source\StateMachine.h" />
     <ClInclude Include="Source\StateVillager.h" />
     <ClInclude Include="Source\Tree.h" />
+    <ClInclude Include="Source\UIAltarPopup.h" />
     <ClInclude Include="Source\UIBase.h" />
     <ClInclude Include="Source\UIManager.h" />
     <ClInclude Include="Source\UIMessagePopup.h" />
