--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Source\Altar.cpp" />
     <ClCompile Include="Source\AnimationBase.cpp" />
     <ClCompile Include="Source\AnimationJump.cpp" />
+    <ClCompile Include="Source\AnimationWalk.cpp" />
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Building.cpp" />
     <ClCompile Include="Source\Bush.cpp" />
@@ -207,6 +208,7 @@
     <ClInclude Include="Source\Altar.h" />
     <ClInclude Include="Source\AnimationBase.h" />
     <ClInclude Include="Source\AnimationJump.h" />
+    <ClInclude Include="Source\AnimationWalk.h" />
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Building.h" />
     <ClInclude Include="Source\Bush.h" />
