changed UI scales(altrapopup, coreinfo, menu and researchbutton) and slightly edited rendering for UI. added research button function, will deduct 10 rp for each research unlocked (only one button working with boolean for now) Added UIOverlay cpp and h, transparent white quad to faciliatate ingame options and research tree

--- a/SP4 GDT Team 10/AI/AI.vcxproj.filters
+++ b/SP4 GDT Team 10/AI/AI.vcxproj.filters
@@ -227,6 +227,9 @@
     <ClCompile Include="Source\UIResearchButton.cpp">
       <Filter>UI\UIObjects</Filter>
     </ClCompile>
+    <ClCompile Include="Source\UIOverlay.cpp">
+      <Filter>UI\UIObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -419,6 +422,9 @@
       <Filter>UI\UIObjects</Filter>
     </ClInclude>
     <ClInclude Include="Source\UIResearchButton.h">
+      <Filter>UI\UIObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\UIOverlay.h">
       <Filter>UI\UIObjects</Filter>
     </ClInclude>
   </ItemGroup>
