--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="Source\EffectTrail.cpp" />
     <ClCompile Include="Source\Environment.cpp" />
     <ClCompile Include="Source\GameObject.cpp" />
+    <ClCompile Include="Source\Granary.cpp" />
     <ClCompile Include="Source\Graph.cpp" />
     <ClCompile Include="Source\Grid.cpp" />
     <ClCompile Include="Source\House.cpp" />
@@ -210,6 +211,7 @@
     <ClCompile Include="Source\UIResearchButton.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
     <ClCompile Include="Source\Villager.cpp" />
+    <ClCompile Include="Source\WoodShed.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Altar.h" />
@@ -235,6 +237,7 @@
     <ClInclude Include="Source\Environment.h" />
     <ClInclude Include="Source\GameObject.h" />
     <ClInclude Include="Source\Geometry.h" />
+    <ClInclude Include="Source\Granary.h" />
     <ClInclude Include="Source\Graph.h" />
     <ClInclude Include="Source\Grid.h" />
     <ClInclude Include="Source\House.h" />
@@ -278,6 +281,7 @@
     <ClInclude Include="Source\Utility.h" />
     <ClInclude Include="Source\Vertex.h" />
     <ClInclude Include="Source\Villager.h" />
+    <ClInclude Include="Source\WoodShed.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
