--- a/SP4 GDT Team 10/Common/Common.vcxproj.filters
+++ b/SP4 GDT Team 10/Common/Common.vcxproj.filters
@@ -61,5 +61,8 @@
     <ClInclude Include="Source\SceneManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\EasingStyle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
