--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Altar.cpp" />
     <ClCompile Include="Source\AnimationBase.cpp" />
+    <ClCompile Include="Source\AnimationChopping.cpp" />
     <ClCompile Include="Source\AnimationJump.cpp" />
     <ClCompile Include="Source\AnimationPickUp.cpp" />
     <ClCompile Include="Source\AnimationWalk.cpp" />
@@ -218,6 +219,7 @@
   <ItemGroup>
     <ClInclude Include="Source\Altar.h" />
     <ClInclude Include="Source\AnimationBase.h" />
+    <ClInclude Include="Source\AnimationChopping.h" />
     <ClInclude Include="Source\AnimationJump.h" />
     <ClInclude Include="Source\AnimationPickUp.h" />
     <ClInclude Include="Source\AnimationWalk.h" />
