--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -163,12 +163,14 @@
     <ClCompile Include="Source\CalamityBase.cpp" />
     <ClCompile Include="Source\CalamityEarthquake.cpp" />
     <ClCompile Include="Source\CalamityManager.cpp" />
+    <ClCompile Include="Source\CalamityTsunami.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\ChiefHut.cpp" />
     <ClCompile Include="Source\Date.cpp" />
     <ClCompile Include="Source\DepthFBO.cpp" />
     <ClCompile Include="Source\EffectBase.cpp" />
     <ClCompile Include="Source\EffectHand.cpp" />
+    <ClCompile Include="Source\EffectGridWarning.cpp" />
     <ClCompile Include="Source\EffectManager.cpp" />
     <ClCompile Include="Source\EffectReticle.cpp" />
     <ClCompile Include="Source\EffectTrail.cpp" />
@@ -200,6 +202,7 @@
     <ClCompile Include="Source\StateMachine.cpp" />
     <ClCompile Include="Source\StateVillager.cpp" />
     <ClCompile Include="Source\Tree.cpp" />
+    <ClCompile Include="Source\Tsunami.cpp" />
     <ClCompile Include="Source\UIAltarPopup.cpp" />
     <ClCompile Include="Source\UIBase.cpp" />
     <ClCompile Include="Source\UICoreInfo.cpp" />
@@ -227,6 +230,7 @@
     <ClInclude Include="Source\CalamityBase.h" />
     <ClInclude Include="Source\CalamityEarthquake.h" />
     <ClInclude Include="Source\CalamityManager.h" />
+    <ClInclude Include="Source\CalamityTsunami.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\ChiefHut.h" />
     <ClInclude Include="Source\ConcreteMessages.h" />
@@ -234,6 +238,7 @@
     <ClInclude Include="Source\DepthFBO.h" />
     <ClInclude Include="Source\EffectBase.h" />
     <ClInclude Include="Source\EffectHand.h" />
+    <ClInclude Include="Source\EffectGridWarning.h" />
     <ClInclude Include="Source\EffectManager.h" />
     <ClInclude Include="Source\EffectReticle.h" />
     <ClInclude Include="Source\EffectTrail.h" />
@@ -271,6 +276,7 @@
     <ClInclude Include="Source\StateMachine.h" />
     <ClInclude Include="Source\StateVillager.h" />
     <ClInclude Include="Source\Tree.h" />
+    <ClInclude Include="Source\Tsunami.h" />
     <ClInclude Include="Source\UIAltarPopup.h" />
     <ClInclude Include="Source\UIBase.h" />
     <ClInclude Include="Source\UICoreInfo.h" />
