--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -173,9 +173,11 @@
     <ClCompile Include="Source\Date.cpp" />
     <ClCompile Include="Source\DepthFBO.cpp" />
     <ClCompile Include="Source\EffectBase.cpp" />
+    <ClCompile Include="Source\EffectCloud.cpp" />
     <ClCompile Include="Source\EffectHand.cpp" />
     <ClCompile Include="Source\EffectGridWarning.cpp" />
     <ClCompile Include="Source\EffectManager.cpp" />
+    <ClCompile Include="Source\EffectMovable.cpp" />
     <ClCompile Include="Source\EffectReticle.cpp" />
     <ClCompile Include="Source\EffectTrail.cpp" />
     <ClCompile Include="Source\Environment.cpp" />
@@ -245,9 +247,11 @@
     <ClInclude Include="Source\Date.h" />
     <ClInclude Include="Source\DepthFBO.h" />
     <ClInclude Include="Source\EffectBase.h" />
+    <ClInclude Include="Source\EffectCloud.h" />
     <ClInclude Include="Source\EffectHand.h" />
     <ClInclude Include="Source\EffectGridWarning.h" />
     <ClInclude Include="Source\EffectManager.h" />
+    <ClInclude Include="Source\EffectMovable.h" />
     <ClInclude Include="Source\EffectReticle.h" />
     <ClInclude Include="Source\EffectTrail.h" />
     <ClInclude Include="Source\Environment.h" />
