--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -196,6 +196,7 @@
     <ClCompile Include="Source\MeshBuilder.cpp" />
     <ClCompile Include="Source\Mountain.cpp" />
     <ClCompile Include="Source\MousePicker.cpp" />
+    <ClCompile Include="Source\Pig.cpp" />
     <ClCompile Include="Source\PostOffice.cpp" />
     <ClCompile Include="Source\ProjectileManager.cpp" />
     <ClCompile Include="Source\Projectiles.cpp" />
@@ -207,6 +208,7 @@
     <ClCompile Include="Source\SMManager.cpp" />
     <ClCompile Include="Source\State.cpp" />
     <ClCompile Include="Source\StateMachine.cpp" />
+    <ClCompile Include="Source\StatePig.cpp" />
     <ClCompile Include="Source\StateVillager.cpp" />
     <ClCompile Include="Source\Tree.cpp" />
     <ClCompile Include="Source\Tsunami.cpp" />
@@ -276,6 +278,7 @@
     <ClInclude Include="Source\MousePicker.h" />
     <ClInclude Include="Source\Node.h" />
     <ClInclude Include="Source\ObjectBase.h" />
+    <ClInclude Include="Source\Pig.h" />
     <ClInclude Include="Source\PostOffice.h" />
     <ClInclude Include="Source\ProjectileManager.h" />
     <ClInclude Include="Source\Projectiles.h" />
@@ -288,6 +291,7 @@
     <ClInclude Include="Source\SMManager.h" />
     <ClInclude Include="Source\State.h" />
     <ClInclude Include="Source\StateMachine.h" />
+    <ClInclude Include="Source\StatePig.h" />
     <ClInclude Include="Source\StateVillager.h" />
     <ClInclude Include="Source\Tree.h" />
     <ClInclude Include="Source\Tsunami.h" />
